modifying devices app

--- a/net_intentions/templates/devices/index.html
+++ b/net_intentions/templates/devices/index.html
@@ -16,8 +16,8 @@
   <td>{{ device.name }}</td>
   <td>{{ device.management_ip }}</td>
   <td>{{ device.region }}</td>
-  <td>{{ device.device_role }}</td>
-  <td>{{ device.device_platform }}</td>
+  <td>{{ device.role }}</td>
+  <td>{{ device.platform }}</td>
  </tr>
 {%  endfor %}
 </table>
